--- a/obsidian-plex.css
+++ b/obsidian-plex.css
@@ -5,12 +5,12 @@ obsidian-plex
 
 - [IBM Plex](https://www.ibm.com/plex/) fonts, must be locally installed.
 - Monospace font for tables in editor mode
-- Fixes for paragraph spacing in blockquotes in preview
 
 # Credits
 
 - Color palette for graph in dark mode are from https://github.com/nickmilo/Cybertron
 - Color palette for graph in light node are from https://github.com/ryjjin/Obsidian-Dark-Graphite-Pie-theme
+- Many of the CSS hacks are from the Obsidian Community.
 
 */
 
