Update and rename obsidian-plex.css to obsidian.css

--- a/obsidian.css
+++ b/obsidian.css
@@ -1,7 +1,7 @@
 /*
 obsidian-plex
 
-# Features
+# Featureshttps://github.com/bkyle/obsidian-plex-theme/blob/main/obsidian-plex.css
 
 - [IBM Plex](https://www.ibm.com/plex/) fonts, must be locally installed.
 - Monospace font for tables in editor mode
