--- a/obsidian.css
+++ b/obsidian.css
@@ -15,10 +15,10 @@ obsidian-plex
 */
 
 :root {
-  --font-family-editor: 'IBM Plex Sans', var(--default-font); 
+  --font-family-editor: 'IBM Plex Sans', var(--default-font);
   --font-family-preview: 'IBM Plex Sans', var(--default-font);
   --font-family-monospace: 'IBM Plex Mono', 'Source Code Pro', monospace;
-  
+
   --pie-graph-circle: #ec0c0c;
   --pie-graph-line: #cccccc;
   --pie-graph-text: #969696;
@@ -60,8 +60,10 @@ obsidian-plex
 
   --text-accent: #002d9c;
   --text-accent-hover: #0f62fe;
-  --interactive-accent: #002d9c;
-  --interactive-accent-hover: #001d6c;
+  /* --interactive-accent: #002d9c; */
+  /* --interactive-accent-hover: #001d6c; */
+
+  --calendar-accent: rgb(203, 77, 73);
 }
 
 .theme-dark {
@@ -74,8 +76,10 @@ obsidian-plex
 
   --text-accent: #78a9ff;
   --text-accent-hover: #a6c8ff;
-  --interactive-accent: #002d9c;
-  --interactive-accent-hover: #001d6c;
+  /* --interactive-accent: #002d9c; */
+  /* --interactive-accent-hover: #001d6c; */
+
+  --calendar-accent: rgb(116, 190, 247);
 }
 
 
@@ -258,14 +262,14 @@ obsidian-plex
 .cm-hmd-list-indent .cm-tab::before {
     left: 0;
     top: -5px;
-    bottom: -4px; 
+    bottom: -4px;
 }
 
 ul ul::before {
     left: -1em;
     top: 0;
-    bottom: 0; 
-} 
+    bottom: 0;
+}
 
 /**
  * Eliminate scroll bars for transclusions
@@ -274,4 +278,14 @@ ul ul::before {
 .markdown-preview-view .markdown-embed-content,
 .markdown-preview-view .markdown-embed-content>.markdown-preview-view {
   max-height: unset;
+}
+
+
+/* https://github.com/liamcain/obsidian-calendar-plugin */
+#calendar-container {
+  --color-text-today: var(--calendar-accent);
+}
+
+#calendar-container .year {
+  color: var(--calendar-accent);
 }
