adjusted graph text color for the light theme

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,7 @@ obsidian-plex
 
   --pie-graph-circle: #ec0c0c;
   --pie-graph-line: #cccccc;
-  --pie-graph-text: #969696;
+  --pie-graph-text: var(--text-normal);
   --pie-graph-tag: #b9ec41;
   --pie-graph-attach: #83d4f4;
   --pie-graph-unresolved: #8f938f;
