alias @diagram and @invert

--- a/src/snippets/diagrams.scss
+++ b/src/snippets/diagrams.scss
@@ -1,4 +1,5 @@
 /** Invert the colors of diagrams if in dark mode */
+.theme-dark img[alt*="@invert"],
 .theme-dark img[alt*="@diagram"] {
   filter: invert(100%);
 }
