--- a/src/editor.scss
+++ b/src/editor.scss
@@ -22,3 +22,11 @@
   font-family: var(--font-family-monospace);
   font-size: 90%;
 }
+
+.cm-s-obsidian span.cm-quote {
+  color: var(--text-normal);
+}
+
+.markdown-source-view.mod-cm6.is-live-preview .HyperMD-quote {
+  background-color: unset;
+}
